--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,281 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+.hidden{visibility: hidden;}
+.hiddenblock{display:none;}
+.display{visibility: visible;}
+.displayblock{display:block;}
+.displayflex{display:flex;}
+.red{background-color: hwb(0 19% 0%);
+color:white;}
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+body {
+  margin: 0;
+  font-family: "Poetsen One", sans-serif;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.confetti-con {
+  width:600px
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+canvas{
+  width:100px;
+  height:100%;
+}
+/* HOME SECTION */
+.home-main-con{
+  min-height:100vh;
+  height:auto;
+  
+}
+.home-title-con {
+  text-align: center;
+}
+#home-todolist-title {
+  background-color: hwb(0 63% 37%);
+  display:inline-block;
+  padding:10px;
+  border-radius: 20px;
+}
+.home-content-child {
+  margin-left:5%;
+  margin-right: 20%;
+  position:relative;
+}
+.home-content-subchild {
+  text-align: center;
+  font-weight: 100px;
+  transition: all ease-in-out 300ms;
+}
+.home-content-title-con {
+  width:80%;
+  border:solid green;
+  border-radius: 20px;
+  transition: all ease-in-out 300ms;
+  cursor: pointer;
+}
+.home-content-title-con:hover {
+  background-color: #39ff78;
+}
+.home-content-title-con:active {
+  background-color: #009730;
+}
+#home-content-title {
+  font-weight:lighter;
+}
+.home-content-con {
+  margin-top:10px;
+}
+/* CHANGE LATER */
+.home-content-icon {
+  display:flex;
+  justify-content: space-around;
+}
+#checkicon {
+  width:30px;
+  height:30px;
+}
+.home-content-checkicon {
+  background-color: greenyellow;
+  display:inline-block;
+  padding:5px;
+  border-radius: 50%;
+  position:absolute;
+  right:5%;
+  top:10px;
+}
+.WHYY {
+  display:inline-block;
   margin: 0;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+#Xicon {
+  width:30px;
+  height:30px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.home-content-Xcon-property {
+  width:20%;
+  border-radius: 20px;
 }
 
-a {
-  color: inherit;
+.home-content-Xicon {
+  background-color: hwb(0 13% 0%);
+  display:inline-block;
+  padding:5px;
+  border-radius: 50%;
+  position:absolute;
+  left:5%;
+  top:10px;
+  cursor: pointer;
+}
+.home-content-Xicon:hover {
+  background-color: #f88f8f;
+}
+.home-content-Xicon:active {
+  background-color: #c20000;
+}
+
+/* END HERE */
+
+
+/* FOR FOOTER */
+.main-con {
+  height:100vh;
+}
+.footer-main-con {
+  background-image: linear-gradient(to right,#1AC8F6, black);
+  color:white;
+  height:70px;
+}
+.footer-sub-con {
+  display:flex;
+  justify-content: space-around;
+}
+.plus-icon-con {
+  width:50px;
+  padding-top:10px;
+  position: relative;
+}
+.plus-icon {
+  width:50px;
+  height: 50px;
+  color: black;
+  position:absolute;
+  bottom:20px;
+  right:-10px;
+  background-image: linear-gradient(to right,#1AC8F6, black);
+  border: solid white 3px;
+  border-radius: 50%;
+  padding:10px;
+  padding-top:7px;
+  cursor: pointer;
+}
+.footer-home {
+  cursor: pointer;
   text-decoration: none;
+  color:white;
+  font-size: 23px;
+}
+.footer-home-con {
+  margin-top:19px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.footer-creator {
+  cursor: pointer;
+  text-decoration: none;
+  color:white;
+  font-size: 23px;
 }
+.footer-creator-con {
+  margin-top:19px;
+}
+
+
+/* END HERE */
+.header-main-con {
+  background-color: #1185A3;
+  height:70px;
+  display:flex;
+  justify-content: space-between;
+}
+.header-potato-icon {
+  width:auto;
+  display:inline-block;
+  margin-left:20px;
+  margin-top:5px;
+}
+.header-edit-icon {
+  width:auto;
+  padding:20px;
+}
+.edit-icon {
+  width:30px;
+  height:30px;
+  cursor: pointer;
+}
+.home-mutebtn-con {
+  position: absolute;
+  right:4%;
+  top: 20px;
+}
+.mute-btn {
+  padding:7px;
+  padding-left:10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  position: relative;
+  bottom:4px;
+  cursor: pointer;
+}
+.header-display-text {
+  display:inline-block;
+  margin:0px;
+  margin-left:10px;
+  transform: translateY(-20px);
+}
+
+/* Editor SECTION */
+
+.editor-main-con {
+  display: flex;
+  justify-content: center;
+}
+.editor-con {
+  width:65%;
+}
+.editor-input-con {
+  text-align: center;
+  width:100%;
+}
+#editor-input {
+  text-align: center;
+  padding:15px;
+  width:80%;
+  font-size: 15px;
+  border-radius: 15px;
+  border:none;
+  background-color: #38a0ba;
+  color:white;
+  cursor:text;
+}
+.editor-submit-con{
+  display:flex;
+  justify-content: right;
+}
+#editor-submit {
+  padding:8px;
+  padding-left:10px;
+  padding-right: 10px;
+  background-color: #38a0ba;
+  color:white;
+  border-radius: 10px;
+  border:none;
+  cursor: pointer;
+}
+
+
+/* END HERE */
+
+/* ADD ON */
+
+
+
+
+/* END HERE */
+
+
+/*  ANIMATION */
+.freezespin{transform: rotateZ(225deg);}
+.spinicon {animation: spinicon 1s;}
+.spiniconback {animation: spiniconback 1s;}
+
+
+@keyframes spinicon {
+  to{transform: rotateZ(225deg);}
+}
+@keyframes spiniconback {
+  from{transform: rotateZ(225deg);}
+}
+
+
+
+/* END Here  */
